--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.4.5",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-simple-typewriter": "^5.0.1",
     "react-tsparticles": "^2.6.0",
     "web-vitals": "^2.1.4"
